force-app/main/default/objects/Recommendation_hz__c/Recommendation_hz__c.object-meta.xml
<CustomObject>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Recommendation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>