force-app/main/default/objects/Recommendation_hz__c/fields/PersonalMessage__c.field-meta.xml
<CustomField>
    <fullName>PersonalMessage__c</fullName>
    <label>Personal Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>