force-app/main/default/objects/Recommendation_hz__c/fields/SentDateTime__c.field-meta.xml
<CustomField>
    <fullName>SentDateTime__c</fullName>
    <label>Sending Date</label>
    <type>DateTime</type>
</CustomField>