force-app/main/default/objects/Recommendation_hz__c/fields/SentUsing__c.field-meta.xml
<CustomField>
    <fullName>SentUsing__c</fullName>
    <label>Sent using</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>