force-app/main/default/objects/Recommendation_hz__c/fields/SystemEmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SystemEmailTemplateId__c</fullName>
    <label>SystemEmailTemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>